Build ++ Errors
SVN-Revision: 10507